--- a/HTML Dasar/1-tugas.html
+++ b/HTML Dasar/1-tugas.html
@@ -1,3 +1,4 @@
+<!-- * Buat halaman sederhana dengan struktur dasar HTML yang berisi header, paragraf, dan footer. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
