menyelesaikan HTML Dasar/Easy/3-tugas.html

--- a/HTML Dasar/1-tugas.html
+++ b/HTML Dasar/1-tugas.html
@@ -1,16 +1,24 @@
 <!-- * Buat halaman sederhana dengan struktur dasar HTML yang berisi header, paragraf, dan footer. -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Dasar/Easy/1</title>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>HTML Dasar/Easy/1</title>
 </head>
+
 <body>
-    <h1>Portal Informasi Teknologi Terbaru</h1>
-    <p>Kami berdedikasi untuk memberikan konten berkualitas yang dapat membantu Anda memahami perkembangan terbaru di dunia teknologi. Dari tutorial, tips, hingga berita terkini, kami menyajikannya secara ringkas dan mudah dipahami.</p>
-    <footer>
-        <p>© 2024 JourneyAries. Semua Hak Dilindungi.</p>
-    </footer>
+	<h1>Portal Informasi Teknologi Terbaru</h1>
+	<p>
+		Kami berdedikasi untuk memberikan konten berkualitas yang dapat
+		membantu Anda memahami perkembangan terbaru di dunia teknologi. Dari
+		tutorial, tips, hingga berita terkini, kami menyajikannya secara
+		ringkas dan mudah dipahami.
+	</p>
+	<footer>
+		<p>© 2024 JourneyAries. Semua Hak Dilindungi.</p>
+	</footer>
 </body>
+
 </html>
