wip(html-dasar/medium/3): konten html only ready

--- a/HTML Dasar/Medium/1-tugas.html
+++ b/HTML Dasar/Medium/1-tugas.html
@@ -49,10 +49,8 @@
     </a>
     <br>
     <p>Saya adalah seorang desainer web dan pengembang aplikasi dengan pengalaman lebih dari 5 tahun. Saya telah bekerja
-      dengan
-      berbagai klien dan industri, menciptakan solusi digital yang memenuhi kebutuhan unik mereka. Saya memiliki
-      keterampilan
-      dalam HTML, CSS, JavaScript, dan berbagai framework modern.</p>
+      dengan berbagai klien dan industri, menciptakan solusi digital yang memenuhi kebutuhan unik mereka. Saya memiliki
+      keterampilan dalam HTML, CSS, JavaScript, dan berbagai framework modern.</p>
   </section>
   <!-- [END] Perkenalan Diri -->
 
