[WIP](UI) HTML Dasar/Hard/1: tambah button

--- a/HTML Dasar/hard/1-tugas/index.html
+++ b/HTML Dasar/hard/1-tugas/index.html
@@ -85,7 +85,7 @@
           <label for="pesan">Pesan Anda 
             <textarea id="pesan" rows="8" cols="50"></textarea>
           </label>
-          <button type=""></button>
+          <button type="submit">Kirim Pesan</button>
         </form>
       </section>
       <!-- [END] form kontak -->
