[WIP](UI) CSS Layouting/Easy/3: ui design ready

--- a/CSS Layouting/Easy/3-tugas/index.html
+++ b/CSS Layouting/Easy/3-tugas/index.html
@@ -10,6 +10,38 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
+  <div class="container">
+    <footer class="footer">
+      <div class="footer__body">
+        <div class="footer__section">
+          <h1>Ikuti Kami</h1>
+          <div class="footer__menu">
+            <a class="footer__link-icon" href="#"><img src="icons/FacebookLogo.svg">Facebook</a>
+            <a class="footer__link-icon" href="#"><img src="icons/InstagramLogo.svg">Instagram</a>
+            <a class="footer__link-icon" href="#"><img src="icons/TwitterLogo.svg">Twitter</a>
+          </div>
+        </div>
+        <div class="footer__section">
+          <h1>Kontak Kami</h1>
+          <div class="footer__menu">
+            <a href="#">Jhon Doe</a>
+            <a href="#">Jhondoe@example.com</a>
+            <a href="#">+63 823-1234-8749</a>
+          </div>
+        </div>
+        <div class="footer__section">
+          <h1>Support</h1>
+          <div class="footer__menu">
+            <a href="#">FAQ</a>
+            <a href="#">Syarat dan Ketentuan</a>
+            <a href="#">Kebijakan Privasi</a>
+          </div>
+        </div>
+      </div>
+      <div class="footer__copyright">
+        <p>© 2024 E-Commerce. Semua Hak Cipta Dilindungi.</p>
+      </div>
+    </footer>
+  </div>
 </body>
-</html>s
+</html>
