--- a/CSS Layouting/Medium/2-tugas/index.html
+++ b/CSS Layouting/Medium/2-tugas/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,60 @@
   <!-- link -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
+
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
+
 <body>
   
 </body>
-</html>s
+  <div class="container">
+    <section class="card">
+      <ul class="card__content">
+        <li>
+          <h1>OPPENHEIMER</h1>
+        </li>
+        <li>
+          <p class="card__wrp-director">Directed by <span class="card__txt-director--bold">Christopher Nolan</span></p>
+        </li>
+        <li>
+          <div class="card__wrp-rating">
+            <div class="card__stars">
+              <img src="img/starFull.svg">
+              <img src="img/starFull.svg">
+              <img src="img/starFull.svg">
+              <img src="img/starFull.svg">
+              <img src="img/StarHalf.svg">
+            </div>
+            <p><span class="card__txt-user-rating--bold">4.68</span><span class="card__txt-user-rating--transparent"> /5</span></p>
+          </div>
+        </li>
+        <li class="card__list">
+          <div class="card__wrp-tag">
+            <div class="card__txt-tag card__txt-tag--history">History</div>
+            <div class="card__txt-tag card__txt-tag--drama">Drama</div>
+            <div class="card__txt-tag card__txt-tag--thriller">Thriller</div>
+          </div>
+        </li>
+        <li class="card__list">
+          <p>During World War II, Lt. Gen. Leslie Groves Jr. appoints physicist J. Robert Oppenheimer to work on the top-secret Manhattan Project.</p>
+        </li>
+        <li class="card__list">
+          <div class="card__wrp-cast">
+            <p class="card__txt-cast">Cast</p>
+            <div class="card__wrp-caster">
+              <img src="img/1.png">
+              <img src="img/2.png">
+              <img src="img/3.png">
+              <img src="img/4.png">
+              <img src="img/5.png">
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
+  </div>
+</html>
