[WIP](UI) CSS Layouting/Medium/3: ui design ready

--- a/CSS Layouting/Medium/3-tugas/index.html
+++ b/CSS Layouting/Medium/3-tugas/index.html
@@ -1,5 +1,8 @@
+<!-- Masonry Layout with CSS Columns: Desain sebuah layout berbasis "masonry" di mana kotak-kotak (dengan tinggi variatif) tersusun tanpa celah besar antar baris, mirip dengan tata letak Pinterest. Gunakan properti columns untuk mengimplementasikan tata letak ini tanpa bantuan JavaScript. -->
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +12,23 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  
+  <div class="container">
+    <main class="gallery">
+      <h1>Mansory Layout</h1>
+      <section class="gallery__body">
+        <img src="img/1.png">
+        <img src="img/2.png">
+        <img src="img/3.png">
+        <img src="img/4.png">
+        <img src="img/5.png">
+        <img src="img/6.png">
+        <img src="img/7.png">
+        <img src="img/8.png">
+        <img src="img/9.png">
+      </section>
+    </main>
+  </div>
 </body>
-</html>s
+</html>
