--- a/CSS Layouting/Hard/2-tugas/index.html
+++ b/CSS Layouting/Hard/2-tugas/index.html
@@ -1,15 +1,34 @@
+<!-- CSS-Only Modal Popup: Buat sebuah modal popup yang bisa muncul ketika tombol di-klik, menggunakan CSS murni. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>CSS Layouting/Hard/2</title>
 
   <!-- link -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
+  <div class="container">
+    <a href="#modal1" class="button">Open Modal / Popup</a>
+
+    <!-- Modal / Popup -->
+    <div id="modal1" class="modal">
+      <div class="modal__content">
+        <div class="modal__header">
+          <h2>CSS Only Modal / Popup</h2>
+          <a class="modal__btn-close" href="index.html">
+            <div></div>
+            <div></div>
+          </a>
+        </div>
+        <div class="modal__body">
+          <p>You can use :target pseudo-class to create a modals without JavaScript.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
-</html>s
+</html>
