[WIP](UI) CSS Grid/Easy/2: ui design ready

--- a/CSS Grid/Easy/2-tugas/index.html
+++ b/CSS Grid/Easy/2-tugas/index.html
@@ -10,6 +10,71 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
+  <div class="container">
+    <section class="team">
+      <div class="team__header">
+        <h1>We bring a wealth of skills and experience from a wide range of backgrounds</h1>
+        <p>Our philosophy is simple, hire great people and give them the resources and support to do their best work</p>
+      </div>
+      <div class="team__gallery">
+        <div class="team__card">
+          <div class="team__text">
+            <p class="team__name">Orlando Diggs</p>
+            <p>Co-Founder and CCO</p>
+          </div>
+          <img src="img/1.png">
+        </div>
+        <div class="team__card">
+          <div class="team__text">
+            <p class="team__name">Orlando Diggs</p>
+            <p>Co-Founder and CCO</p>
+          </div>
+          <img src="img/1.png">
+        </div>
+        <div class="team__card">
+          <div class="team__text">
+            <p class="team__name">Orlando Diggs</p>
+            <p>Co-Founder and CCO</p>
+          </div>
+          <img src="img/1.png">
+        </div>
+        <div class="team__card">
+          <div class="team__text">
+            <p class="team__name">Orlando Diggs</p>
+            <p>Co-Founder and CCO</p>
+          </div>
+          <img src="img/1.png">
+        </div>
+        <div class="team__card">
+          <div class="team__text">
+            <p class="team__name">Orlando Diggs</p>
+            <p>Co-Founder and CCO</p>
+          </div>
+          <img src="img/1.png">
+        </div>
+        <div class="team__card">
+          <div class="team__text">
+            <p class="team__name">Orlando Diggs</p>
+            <p>Co-Founder and CCO</p>
+          </div>
+          <img src="img/1.png">
+        </div>
+        <div class="team__card">
+          <div class="team__text">
+            <p class="team__name">Orlando Diggs</p>
+            <p>Co-Founder and CCO</p>
+          </div>
+          <img src="img/1.png">
+        </div>
+        <div class="team__card">
+          <div class="team__text">
+            <p class="team__name">Orlando Diggs</p>
+            <p>Co-Founder and CCO</p>
+          </div>
+          <img src="img/1.png">
+        </div>
+      </div>
+    </section>
+  </div>
 </body>
 </html>
