[WIP](UI) CSS Grid/Easy/3: ui design ready

--- a/CSS Grid/Easy/3-tugas/index.html
+++ b/CSS Grid/Easy/3-tugas/index.html
@@ -10,6 +10,23 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
+  <div class="container">
+    <main class="gallery">
+      <h1 class="gallery__heading">My Album</h1>
+      <div class="gallery__picture">
+          <img src="img/0.png">
+      </div>
+      <div class="gallery__thumbs">
+        <img class="gallery__thumbs--active" src="img/1.png">
+        <img src="img/2.png">
+        <img src="img/3.png">
+        <img src="img/4.png">
+        <img src="img/5.png">
+        <img src="img/6.png">
+        <img src="img/7.png">
+        <img src="img/8.png">
+      </div>
+    </main>
+  </div>
 </body>
 </html>
