[WIP](UI) CSS Grid/Medium/1: ui design ready

--- a/CSS Grid/Medium/1-tugas/index.html
+++ b/CSS Grid/Medium/1-tugas/index.html
@@ -10,6 +10,67 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
+  <div class="container">
+    <section class="calendar">
+      <div class="calendar__header">
+        <button class="calendar__btn-previous"><img src="icon/ArrowLeft.png"></button>
+        <h4 class="calendar__month">April 2024</h4>
+        <button class="calendar__btn-next"><img src="icon/ArrowRight.png"></button>
+      </div>
+      <div class="calendar__body">
+        <span class="calendar__week">Sat</span>
+        <span class="calendar__week">Sun</span>
+        <span class="calendar__week">Mon</span>
+        <span class="calendar__week">Tues</span>
+        <span class="calendar__week">Wed</span>
+        <span class="calendar__week">Thurs</span>
+        <span class="calendar__week">Fri</span>
+
+        <button class="calendar__date calendar__date--faded">29</button>
+        <button class="calendar__date calendar__date--faded">30</button>
+        <button class="calendar__date calendar__date--faded">31</button>
+        <button class="calendar__date">1</button>
+        <button class="calendar__date">2</button>
+        <button class="calendar__date">3</button>
+        <button class="calendar__date">4</button>
+        
+        <button class="calendar__date">5</button>
+        <button class="calendar__date calendar__date--current-day">6</button>
+        <button class="calendar__date">7</button>
+        <button class="calendar__date">8</button>
+        <button class="calendar__date">9</button>
+        <button class="calendar__date">10</button>
+        <button class="calendar__date">11</button>
+
+        <button class="calendar__date">12</button>
+        <button class="calendar__date">13</button>
+        <button class="calendar__date">14</button>
+        <button class="calendar__date">15</button>
+        <button class="calendar__date">16</button>
+        <button class="calendar__date">17</button>
+        <button class="calendar__date">18</button>
+
+        <button class="calendar__date">19</button>
+        <button class="calendar__date">20</button>
+        <button class="calendar__date">21</button>
+        <button class="calendar__date">22</button>
+        <button class="calendar__date">23</button>
+        <button class="calendar__date">24</button>
+        <button class="calendar__date">25</button>
+
+        <button class="calendar__date">26</button>
+        <button class="calendar__date">27</button>
+        <button class="calendar__date">28</button>
+        <button class="calendar__date">29</button>
+        <button class="calendar__date">30</button>
+        <button class="calendar__date calendar__date--faded">1</button>
+        <button class="calendar__date calendar__date--faded">2</button>
+      </div>
+      <div class="calendar__footer">
+        <button class="calendar__btn-cancel">Cancel</button>
+        <button class="calendar__btn-done">Done</button>
+      </div>
+    </section>
+  </div>
 </body>
 </html>
