--- a/CSS Grid/Medium/2-tugas/index.html
+++ b/CSS Grid/Medium/2-tugas/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+	</head>
+
+	<body>
+		<div class="container">
+			<main class="gallery">
+				<h1>Grid Gallery</h1>
+				<div class="gallery__body">
+					<img src="img/1.png" />
+					<img src="img/2.png" />
+					<img src="img/3.png" />
+					<img src="img/4.png" />
+					<img src="img/5.png" />
+				</div>
+			</main>
+		</div>
+	</body>
 </html>
