--- a/CSS Grid/Hard/1-tugas/index.html
+++ b/CSS Grid/Hard/1-tugas/index.html
@@ -33,19 +33,69 @@
         <p>Track: 1</p>
         <p>Presenter</p>
       </div>
-      <div class="schedule__timeline schedule__timeline--1-2">2</div>
-      <div class="schedule__timeline schedule__timeline--1-3">3</div>
-      <div class="schedule__timeline schedule__timeline--2-1">1</div>
-      <div class="schedule__timeline schedule__timeline--2-2">2</div>
-      <div class="schedule__timeline schedule__timeline--2-3">3</div>
-      <div class="schedule__timeline schedule__timeline--3-1">1</div>
-      <div class="schedule__timeline schedule__timeline--3-2">2</div>
-      <div class="schedule__timeline schedule__timeline--3-3">3</div>
-      <div class="schedule__timeline schedule__timeline--4-1">1</div>
-      <div class="schedule__timeline schedule__timeline--4-2">2</div>
+      <div class="schedule__timeline schedule__timeline--1-2">
+        <h4>Talk Title</h4>
+        <p>9:00 - 10:00</p>
+        <p>Track: 1 & 2</p>
+        <p>Presenter</p>
+      </div>
+      <div class="schedule__timeline schedule__timeline--1-3">
+        <h4>Talk Title</h4>
+        <p>10:30 - 11:30</p>
+        <p>Track: 1</p>
+        <p>Presenter</p>
+      </div>
+      <div class="schedule__timeline schedule__timeline--2-1">
+        <h4>Talk Title</h4>
+        <p>8:00 - 9:00</p>
+        <p>Track: 2</p>
+        <p>Presenter</p>
+      </div>
+      <div class="schedule__timeline schedule__timeline--2-2">
+        <h4>Talk Title</h4>
+        <p>10:30 - 11:00</p>
+        <p>Track: 2 & 3</p>
+        <p>Presenter</p>
+      </div>
+      <div class="schedule__timeline schedule__timeline--2-3">
+        <h4>Talk Title</h4>
+        <p>11:00 - 12:00</p>
+        <p>Track: 2</p>
+        <p>Presenter</p>
+      </div>
+      <div class="schedule__timeline schedule__timeline--3-1">
+        <h4>Talk Title</h4>
+        <p>8:00 - 8:30</p>
+        <p>Track: 3</p>
+        <p>Presenter</p>
+      </div>
+      <div class="schedule__timeline schedule__timeline--3-2">
+        <h4>Talk Title</h4>
+        <p>8:30 - 10:00</p>
+        <p>Track: 3</p>
+        <p>Presenter</p>
+      </div>
+      <div class="schedule__timeline schedule__timeline--3-3">
+        <h4>Talk Title</h4>
+        <p>11:00 - 12:00</p>
+        <p>Track: 3</p>
+        <p>Presenter</p>
+      </div>
+      <div class="schedule__timeline schedule__timeline--4-1">
+        <h4>Talk Title</h4>
+        <p>8:00 - 9:00</p>
+        <p>Track: 4</p>
+        <p>Presenter</p>
+      </div>
+      <div class="schedule__timeline schedule__timeline--4-2">
+        <h4>Talk Title</h4>
+        <p>10:30 - 11:00</p>
+        <p>Track: 4</p>
+        <p>Presenter</p>
+      </div>
 
       <!-- break -->
-      <div class="schedule__break"></div>
+      <div class="schedule__break">Break</div>
     </main>
   </div>
 </body>
