[WIP](UI) CSS Grid/Hard/3: ui design 70%

--- a/CSS Grid/Hard/2-tugas/index.html
+++ b/CSS Grid/Hard/2-tugas/index.html
@@ -10,6 +10,68 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
+  <main class="container">
+    <header class="header">
+      <h1>Simple Omelet Recipe</h1>
+      <p>An easy and quick dish, perfect for any meal. This classic omelet combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+    </header>
+    <img class="hero" src="img/1.png">
+    <section class="preperation">
+      <h2>Preperation time</h2>
+      <ul>
+        <li>
+          <strong>Total</strong>
+          <p>Approximately 10 mins</p>
+        </li>
+        <li>
+          <strong>Preperation</strong>
+          <p>5 mins</p>
+        </li>
+        <li>
+          <strong>Cooking</strong>
+          <p>5 mins</p>
+        </li>
+      </ul>
+    </section>
+    <section class="nutrition">
+      <h2>Nutrition</h2>
+      <ul>
+        <li>
+          <strong>Calories</strong>
+          <p>277kcal</p>
+        </li>
+        <li>
+          <strong>Carbs</strong>
+          <p>0g</p>
+        </li>
+        <li>
+          <strong>Protein</strong>
+          <p>20g</p>
+        </li>
+        <li>
+          <strong>Fat</strong>
+          <p>22g</p>
+        </li>
+      </ul>
+    </section>
+    <section class="ingredients">
+      <h2>Ingredients</h2>
+      <ul>
+        <li>
+          <strong>Optional fillings</strong>
+          <p>Cheese, diced vegetables, cooked meats, herbs</p>
+        </li>
+      </ul>
+    </section>
+    <section class="instructions">
+      <h2>Instructions</h2>
+      <ol>
+        <li>
+          <strong>Beat the eggs</strong>
+          <p>in a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</p>
+        </li>
+      </ol>
+    </section>
+  </main>
 </body>
 </html>
