JS/Hard/Part-1/2-tugas

--- a/JAVASCRIPT Dasar/Hard/Part-1/2-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-1/2-tugas/index.html
@@ -8,8 +8,15 @@
   <!-- link -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
+  <style>
+    h2 {
+      color: darkgreen;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
+    <div id="content"></div>
   <script src="js/main.js"></script>
 </body>
 </html>
