JS/Hard/Part-1/4-tugas

--- a/JAVASCRIPT Dasar/Hard/Part-1/4-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-1/4-tugas/index.html
@@ -8,8 +8,17 @@
   <!-- link -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
+  <style>
+    button {
+      background-color: lightblue;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
+  <button id="btnClick">Click Me!</button>
   <script src="js/main.js"></script>
 </body>
 </html>
