JS/Hard/Part-1/5-tugas

--- a/JAVASCRIPT Dasar/Hard/Part-1/5-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-1/5-tugas/index.html
@@ -8,8 +8,15 @@
   <!-- link -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
+  <style>
+    button {
+      background-color: lightcoral;
+      padding: 10px 15px;
+    }
+  </style>
 </head>
 <body>
+  <button id="hoverBtn">Hover over me</button>
   <script src="js/main.js"></script>
 </body>
 </html>
