JS/Hard/Part-1/6-tugas

--- a/JAVASCRIPT Dasar/Hard/Part-1/6-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-1/6-tugas/index.html
@@ -8,8 +8,20 @@
   <!-- link -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
+  <style>
+  #parent {
+    padding: 20px;
+    border: 1px solid black;
+  }
+  #child {
+      color: navy;
+  }
+  </style>
 </head>
 <body>
+  <div id="parent">
+      <p id="child">This is a child element</p>
+  </div>
   <script src="js/main.js"></script>
 </body>
 </html>
