JS/Hard/Part-1/7-tugas

--- a/JAVASCRIPT Dasar/Hard/Part-1/7-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-1/7-tugas/index.html
@@ -8,8 +8,25 @@
   <!-- link -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
+  <style>
+    form {
+      margin: 20px;
+    }
+    input {
+      margin-bottom: 10px;
+      padding: 5px;
+    }
+    button {
+      background-color: lightgray;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
+  <form id="myForm">
+    <input type="text" placeholder="Enter your name" required>
+    <button type="submit">Submit</button>
+  </form>
   <script src="js/main.js"></script>
 </body>
 </html>
