--- a/JAVASCRIPT Dasar/Hard/Part-1/8-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-1/8-tugas/index.html
@@ -8,8 +8,22 @@
   <!-- link -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
+  <style>
+    #parent {
+      padding: 20px;
+      background-color: lightyellow;
+    }
+    #child {
+      padding: 5px 10px;
+      background-color: lightpink;
+    }
+  </style>
 </head>
 <body>
+  <div id="parent" style="border: 2px solid blue; padding: 20px;">
+      Parent
+    <button id="child" style="margin-top: 10px;">Child Button</button>
+  </div>
   <script src="js/main.js"></script>
 </body>
 </html>
