JS/Hard/Part-1/9-tugas

--- a/JAVASCRIPT Dasar/Hard/Part-1/9-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-1/9-tugas/index.html
@@ -8,8 +8,19 @@
   <!-- link -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
+  <style>
+    #box {
+      margin-top: 10px;
+    }
+    button {
+      margin-top: 20px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
+  <div id="box" style="width: 100px; height: 100px; background-color: lightblue;"></div>
+  <button id="colorBtn">Change Color</button>
   <script src="js/main.js"></script>
 </body>
 </html>
