JS/Hard/Part-1/10-tugas

--- a/JAVASCRIPT Dasar/Hard/Part-1/10-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-1/10-tugas/index.html
@@ -8,8 +8,16 @@
   <!-- link -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
+  <style>
+    input, button {
+      margin: 5px;
+    }
+  </style>
 </head>
 <body>
+  <input type="text" id="textInput" placeholder="Type something...">
+  <button id="showTextBtn">Submit</button>
+  <h3 id="outputText"></h3>
   <script src="js/main.js"></script>
 </body>
 </html>
