--- a/JAVASCRIPT Dasar/Hard/Part-1/11-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-1/11-tugas/index.html
@@ -8,8 +8,19 @@
   <!-- link -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
+  <style>
+    ul {
+      padding: 0;
+      list-style-type: none;
+    }
+  </style>
 </head>
 <body>
+  <ul id="myList">
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+  </ul>
   <script src="js/main.js"></script>
 </body>
 </html>
