JS/Hard/Part-1/12-tugas

--- a/JAVASCRIPT Dasar/Hard/Part-1/12-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-1/12-tugas/index.html
@@ -8,8 +8,20 @@
   <!-- link -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
+  <style>
+    #infoBox {
+      margin-top: 10px;
+      padding: 10px;
+      border: 1px solid black;
+    }
+    button {
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
+  <button id="toggleBtn">Toggle Info</button>
+  <div id="infoBox" style="display: block;">This is some information.</div>
   <script src="js/main.js"></script>
 </body>
 </html>
