--- a/JAVASCRIPT Dasar/Hard/Part-1/19-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-1/19-tugas/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			button {
+				padding: 10px;
+				cursor: pointer;
+			}
+			p {
+				font-size: 16px;
+			}
+		</style>
+	</head>
+	<body>
+		<button id="clickCounter">Click Me</button>
+		<p>Clicks: <span id="clickCount">0</span></p>
+		<script src="js/main.js"></script>
+	</body>
 </html>
