--- a/JAVASCRIPT Dasar/Hard/Part-1/21-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-1/21-tugas/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			li {
+				cursor: pointer;
+			}
+			.highlight {
+				background-color: yellow;
+			}
+		</style>
+	</head>
+	<body>
+		<ul id="highlightList">
+			<li>Item 1</li>
+			<li>Item 2</li>
+			<li>Item 3</li>
+		</ul>
+		<script src="js/main.js"></script>
+	</body>
 </html>
