--- a/JAVASCRIPT Dasar/Hard/Part-1/22-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-1/22-tugas/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			button {
+				margin: 5px;
+				cursor: pointer;
+			}
+			.active {
+				background-color: lightgreen;
+			}
+		</style>
+	</head>
+	<body>
+		<button class="btn">Button 1</button>
+		<button class="btn">Button 2</button>
+		<button class="btn">Button 3</button>
+		<script src="js/main.js"></script>
+	</body>
 </html>
