JS/Hard/Part-1/23-tugas

--- a/JAVASCRIPT Dasar/Hard/Part-1/23-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-1/23-tugas/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			ul {
+				margin: 10px;
+			}
+			button {
+				margin: 10px;
+				cursor: pointer;
+			}
+		</style>
+	</head>
+	<body>
+		<ul id="alertList">
+			<li>First Item</li>
+			<li>Second Item</li>
+			<li>Third Item</li>
+		</ul>
+		<button id="alertBtn">Show Alerts</button>
+		<script src="js/main.js"></script>
+	</body>
 </html>
