--- a/JAVASCRIPT Dasar/Hard/Part-1/25-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-1/25-tugas/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			button {
+				margin: 20px;
+				cursor: pointer;
+			}
+		</style>
+	</head>
+	<body>
+		<div id="box" style="width: 50px; height: 50px; background-color: red; position: absolute; left: 0"></div>
+		<button id="startAnimation">Start Animation</button>
+		<script src="js/main.js"></script>
+	</body>
 </html>
