--- a/JAVASCRIPT Dasar/Hard/Part-2/4-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-2/4-tugas/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			div {
+				padding: 10px;
+				margin: 5px;
+				border: 1px solid black;
+			}
+		</style>
+	</head>
+	<body>
+		<div data-type="fruit">Apple</div>
+		<div data-type="fruit">Banana</div>
+		<div data-type="vegetable">Carrot</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
