--- a/JAVASCRIPT Dasar/Hard/Part-2/5-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-2/5-tugas/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			.box {
+				width: 200px;
+				height: 100px;
+				padding: 10px;
+				border: 2px solid black;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="box" id="special">This is a special box</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
