--- a/JAVASCRIPT Dasar/Hard/Part-2/6-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-2/6-tugas/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			p {
+				font-size: 18px;
+				color: blue;
+			}
+
+			button {
+				padding: 5px 10px;
+			}
+		</style>
+	</head>
+	<body>
+		<p id="text">Teks ini akan berubah.</p>
+		<button id="changeTextBtn">Ubah Teks</button>
+		<script src="js/main.js"></script>
+	</body>
 </html>
