JS/Hard/Part-2/10-tugas

--- a/JAVASCRIPT Dasar/Hard/Part-2/10-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-2/10-tugas/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#parent {
+				padding: 20px;
+				border: 2px solid black;
+			}
+
+			.child {
+				padding: 10px;
+				margin: 5px;
+			}
+		</style>
+	</head>
+	<body>
+		<div id="parent">
+			<div class="child">Child Element</div>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
