--- a/JAVASCRIPT Dasar/Hard/Part-2/14-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-2/14-tugas/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			ul {
+				padding: 0;
+				list-style: none;
+			}
+			li {
+				margin: 5px 0;
+			}
+			button {
+				margin-top: 10px;
+			}
+		</style>
+	</head>
+	<body>
+		<ul id="list">
+			<li>Item 1</li>
+			<li>Item 2</li>
+			<li>Item 3</li>
+		</ul>
+		<button id="removeItem">Hapus Item Terakhir</button>
+		<script src="js/main.js"></script>
+	</body>
 </html>
