--- a/JAVASCRIPT Dasar/Hard/Part-2/21-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-2/21-tugas/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			.highlight {
+				background-color: yellow;
+			}
+		</style>
+	</head>
+	<body>
+		<p id="myParagraph">Ini paragraf.</p>
+		<button id="toggleClassBtn">Toggle Highlight</button>
+		<script src="js/main.js"></script>
+	</body>
 </html>
