JS/Hard/Part-2/22-tugas

--- a/JAVASCRIPT Dasar/Hard/Part-2/22-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-2/22-tugas/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#container p {
+				margin: 5px 0;
+				padding: 5px;
+				background-color: lightgray;
+			}
+			button {
+				margin-top: 10px;
+				margin-right: 5px;
+			}
+		</style>
+	</head>
+	<body>
+		<div id="container"></div>
+		<button id="addParagraph">Tambah Paragraf</button>
+		<button id="removeParagraph">Hapus Paragraf</button>
+		<script src="js/main.js"></script>
+	</body>
 </html>
