--- a/JAVASCRIPT Dasar/Hard/Part-2/24-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-2/24-tugas/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			#hoverBox {
+				width: 200px;
+				height: 100px;
+				text-align: center;
+				line-height: 100px;
+				border: 1px solid black;
+				transition: background-color 0.3s;
+			}
+		</style>
+	</head>
+	<body>
+		<div id="hoverBox">Arahkan mouse ke sini</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
